# apps/server/src/tiles/routes/tilesRouter.ts
@@ -1,0 +1,15 @@
+import { Router } from 'express';
+import { FactoryFunction } from 'tsyringe';
+import { TilesController } from '../controllers/tilesController';
+
+export const TILES_ROUTER_SYMBOL = Symbol('tilesRouterFactory');
+
+export const tilesRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
+  const router = Router();
+  const controller = dependencyContainer.resolve(TilesController);
+
+  router.post('/area', controller.postTilesArea);
+  router.post('/list', controller.postTilesList);
+
+  return router;
+};
